--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.13.2",
     "lunar-javascript": "^1.7.7",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
